<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <import type="android.text.InputType"/>

            <import type="com.tama.syarah.R" />
        <variable
            name="viewModel"
            type="com.tama.syarah.login.LoginViewModel" />
        <import type="android.view.View"/>
    </data>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/dimen_24dp"
    tools:context=".login.LoginActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/txt_title"
        style="@style/LargTextStyle"
        android:text="@string/txt_title_login"
        android:layout_marginTop="@dimen/dimen_70dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_title"
        android:id="@+id/sing_account"
        style="@style/LightTextStyle"
        android:text="@string/txt_sign_into_login"
        android:layout_marginTop="@dimen/dimen_10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sing_account"
        android:id="@+id/title_user_name"
        style="@style/LightTextStyle"
        android:text="@string/txt_user_name"
        android:layout_marginTop="@dimen/dimen_30dp"
        />
    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userInput"
        android:layout_marginTop="@dimen/dimen_10dp"
        layout="@layout/layout_edit_text_icon"
        app:isMasked="@{false}"
        app:isEditable="@{true}"
        app:resourceId="@{R.drawable.ic_user_avatar}"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:onTextChanged="@{viewModel.emailTextChanged}"
        app:layout_constraintTop_toBottomOf="@id/title_user_name"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userInput"
        android:id="@+id/title_password"
        style="@style/LightTextStyle"
        android:text="@string/txt_password"
        android:layout_marginTop="@dimen/dimen_30dp"
        />
    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userInputPassword"
        android:layout_marginTop="@dimen/dimen_10dp"
        layout="@layout/layout_edit_text_icon"
        app:isMasked="@{true}"
        app:isEditable="@{true}"
        app:resourceId="@{R.drawable.ic_lock}"
        app:onTextChanged="@{viewModel.passwordTextChanged}"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_password"
        />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dimen_15dp"
        android:id="@+id/progressBar"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="0dp"
        android:id="@+id/login"
        android:layout_height="wrap_content"
        style="@style/PrimaryWhiteButton"
        android:text="@string/txt_login"
        android:layout_marginTop="@dimen/dimen_60dp"
        app:layout_constraintTop_toBottomOf="@id/userInputPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="@{(v)->viewModel.onClickLogin.invoke(v)}"
        android:enabled="@{!viewModel.loadingVisible}"
        android:layout_marginBottom="@dimen/dimen_10dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>