<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <import type="android.text.InputType"/>

        <import type="com.tama.syarah.R" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/dimen_24dp"
        tools:context=".account_info.AccountInformationActivity">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:id="@+id/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/dimen_44dp"
            />

        <TextView
            style="@style/TextHeadLineStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_change_password"
            app:layout_constraintBottom_toBottomOf="@+id/ic_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ic_back"
            app:layout_constraintTop_toTopOf="@id/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/txt_current_password"
            android:text="@string/txt_current_password"
            app:layout_constraintTop_toBottomOf="@id/ic_back"
            android:layout_marginTop="@dimen/dimen_36dp"
            />
        <include layout="@layout/layout_edit_text_icon"
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:resourceId="@{R.drawable.ic_lock}"
            app:layout_constraintTop_toBottomOf="@id/txt_current_password"
            android:layout_marginTop="@dimen/dimen_8dp"
            app:isMasked="@{true}"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/txt_new_password"
            android:text="@string/txt_new_password"
            app:layout_constraintTop_toBottomOf="@id/username"
            android:layout_marginTop="@dimen/dimen_36dp"
            />
        <include layout="@layout/layout_edit_text_icon"
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:resourceId="@{R.drawable.ic_lock}"
            app:layout_constraintTop_toBottomOf="@id/txt_new_password"
            android:layout_marginTop="@dimen/dimen_8dp"
            app:isMasked="@{true}"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/txt_confirm_password"
            android:text="@string/txt_confirm_password"
            app:layout_constraintTop_toBottomOf="@id/phone_number"
            android:layout_marginTop="@dimen/dimen_36dp"
            />
        <include layout="@layout/layout_edit_text_icon"
            android:id="@+id/confirmNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:resourceId="@{R.drawable.ic_lock}"
            app:layout_constraintTop_toBottomOf="@id/txt_confirm_password"
            android:layout_marginTop="@dimen/dimen_8dp"
            app:isMasked="@{true}"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:id="@+id/saveChange"
            android:layout_height="wrap_content"
            style="@style/PrimaryWhiteButton"
            android:text="@string/txt_save_change"
            android:layout_marginTop="@dimen/dimen_60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="@dimen/dimen_10dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>