<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewModel"
            type="com.tama.syarah.onboarding.OnboardingViewModel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".onboarding.OnboardingActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="@dimen/dimen_24dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        style="@style/TextStyleLight"
        tools:text="@string/txt_skip"
        android:text="@string/txt_skip"
        android:id="@+id/skip"
        android:onClick="@{(v)->viewModel.onClickGoLogin.invoke(v)}"
        />



    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_city_car"
        android:id="@+id/ic_city"
        app:layout_constraintTop_toBottomOf="@id/skip"
        android:layout_marginTop="@dimen/dimen_100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_select_service"
        style="@style/MeduimTextStyle"
        android:textSize="@dimen/ts_20sp"
        android:id="@+id/title_selection"
        android:layout_marginTop="@dimen/dimen_100dp"
        app:layout_constraintTop_toBottomOf="@id/ic_city"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:layout_width="0dp"
        app:layout_constraintTop_toBottomOf="@id/title_selection"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:padding="@dimen/dimen_7dp"
        style="@style/LightTextStyle"
        android:gravity="center"
        android:text="Proin ex ipsum, facilisis id tincidunt sed, vulputate in lacus. Donec pharetra faucibus leo, vitae vestibulum leo scelerisque eu. Nam enim dolor, porta at ex ut, eleifend tristique metus. Integer sit amet auctor ligula, vel dictum orci."
        app:layout_constraintStart_toStartOf="@id/ic_city"
        app:layout_constraintEnd_toEndOf="@id/ic_city"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="0dp"
        android:id="@+id/contin"
        android:layout_marginHorizontal="@dimen/dimen_24dp"
        android:layout_height="wrap_content"
        style="@style/PrimaryWhiteButton"
        android:text="@string/txt_continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="@{(v)->viewModel.onClickGoLogin.invoke(v)}"
        android:layout_marginBottom="@dimen/dimen_10dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>